--- a/bins/TODO.txt
+++ b/bins/TODO.txt
@@ -1,1 +1,3 @@
-· Added id_types to global scopes too.
+· Add id_types to global scopes too.
+· Implement all unary op IR and the order of ++ and --.
+· Implement proper stores for unary and binary ops.
