--- a/bins/TODO.txt
+++ b/bins/TODO.txt
@@ -1,3 +1,3 @@
 · Add id_types to global scopes too.
 · Instead of having binary op for each op assignment (AddAssign for example), we should consider it a special assignment.
-· Check and update indirection types and casting in semantic.
+· Fix the clone memory leak.
