--- a/bins/TODO.txt
+++ b/bins/TODO.txt
@@ -1,5 +1,4 @@
 · Add id_types to global scopes too.
 · Instead of having binary op for each op assignment (AddAssign for example), we should consider it a special assignment.
-· Fix the clone memory leak.
-· Fix parsing expressions like this: (*b)--;
+· Fix parsing expressions like this: 1 + (*b)--;
 · We need to avoid double unary ops, for example: ++a--;
